<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_home"
            android:title="@string/sg_mainpage_title" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_favorite"
            android:title="@string/sg_wishlist_title" />
        <item
            android:id="@+id/nav_recommended"
            android:icon="@drawable/ic_thumb_up"
            android:title="@string/sg_recommended_title" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_group"
            android:title="@string/sg_group_title" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_access_time"
            android:title="@string/sg_new_title" />
    </group>

    <item >
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
